<resources>
    <string name="app_name">My Weather</string>
    <string name="now">Now</string>
    <string name="error_text">Some error occurred. Please try again later.</string>
    <string name="feels_like_text">Feels like %s</string>
    <string name="humidity_text">Humidity: %d%%</string>
    <string name="wind_speed_text">Wind Speed: %s m/s</string>
    <string name="city">City</string>
    <string name="five_day_forecast">5-day forecast</string>
    <string name="search_city">Search city</string>
    <string name="recent_searches">Recent Searches</string>
</resources>
